--- a/styles/header.css
+++ b/styles/header.css
@@ -1,5 +1,9 @@
 .cabecalho {
     background-color: var(--branco);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
 }
 
 
