--- a/styles/header.css
+++ b/styles/header.css
@@ -6,4 +6,20 @@
 
 }
 
+.container {
+display: flex;
+align-items: center;
+}
 
+.cabecalho-titulo{
+    display: none;
+}
+@media screen and (min-width:1024px) {
+    .cabecalho-titulo{
+        display: flex;
+    }
+
+    .cabecalho-imagem-transparente{
+        display: none;
+    }
+}
