--- a/header.css
+++ b/header.css
@@ -32,7 +32,7 @@
     display: none;
     position: absolute;
     top: 100%;
-    width: ;
+    width: 60vw;
 }
 
 .container-botao:checked~.lista-menu{
