--- a/header.css
+++ b/header.css
@@ -44,6 +44,16 @@
     background-color: var(--branco);
 }
 
+.menu-link{
+    text-transform: uppercase;
+    text-decoration: none;
+    color: var(--azul-degrade);
+}
+
+.menu-titulo{
+    color: var(--laranja);
+}
+
 
 @media screen and (min-width: 1024px) {
     .cabecalho-titulo {
