--- a/styles/header.css
+++ b/styles/header.css
@@ -3,23 +3,63 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-}
-
-.container {
-display: flex;
-align-items: center;
-}
-
-.cabecalho-titulo{
+    position: relative;
+    }
+    
+    .cabecalho-menu-hamburguer {
+    width: 24px;
+    height: 24px;
+    background-image: url("../img/Menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    display: inline-block;
+    }
+    
+    .container-imagem{
+    padding: 1em;
+    }
+    
+    .container {
+    display: flex;
+    align-items: center;
+    }
+    
+    .cabecalho-titulo {
     display: none;
-}
-@media screen and (min-width:1024px) {
-    .cabecalho-titulo{
-        display: flex;
     }
-
-    .cabecalho-imagem-transparente{
-        display: none;
+    
+    .container-menu{
+    display: none;
+    position: absolute;
+    top: 100%;
+    width: 60vw;
     }
-}
+    
+    .container-botao:checked~.container-menu {
+    display: block;
+    }
+    
+    .menu-item, .menu-item-titulo {
+    padding: 1em;
+    background-color: var(--branco);
+    }
+    
+    .menu-link {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: var(--azul-degrade);
+    }
+    
+    .menu-item-titulo {
+    color: var(--laranja);
+    }
+    
+    @media screen and (min-width: 1024px) {
+    .cabecalho-titulo {
+    display: flex;
+    }
+    
+    .cabecalho-imagem-transparente {
+    display: none;
+    }
+    }
