--- a/styles/header.css
+++ b/styles/header.css
@@ -53,6 +53,14 @@
     .menu-item-titulo {
     color: var(--laranja);
     }
+
+    .container-botao{
+        display: none;
+    }
+
+    .container-titulo-negrito {
+        font-weight: 700;
+    }
     
     @media screen and (min-width: 1024px) {
     .cabecalho-titulo {
