--- a/styles/carrosel.css
+++ b/styles/carrosel.css
@@ -42,3 +42,10 @@
         margin: 1em;
         padding: 1em;
     }
+
+    .card-titulo-1{
+        color: var(--azul-degrade);
+        font-size: 18px;
+        font-weight: 700;
+        margin: 0.5em 0;
+    }
